[FIX] documents: Implement WEBP image resizing in Inspector via CSS
Before this commit:
- Select an image (WEBP format) along with other images.
- The preview in the inspector is distorted.

Reason:
- When introducing the support for WEBP images in the following PR --
  https://github.com/odoo/odoo/pull/85494, the upload of documents was not taken
  into account.
- The current image processing ensures that the supported image formats are
  resized at the backend before being sent to the frontend.

Fix:
- Some image formats (such as WEBP) do not support dynamic server resizing, hence
  the need for additional class.
- The exact values of the `max-width` and `max-height` draw their inspiration
  from the following image resizing values in the `documents_inspector.xml`
  ref- https://github.com/odoo/enterprise/blob/saas-16.4/documents/static/src/views/inspector/documents_inspector.xml#L39

After this commit:
- The WEBP image, along with the other image formats can now be previewed
  without breaking any alignment in the Inspector.
- Link to the PR where WEBP support will be introduced --- https://github.com/odoo/enterprise/pull/59268

Task-3749547

closes odoo/enterprise#62549

X-original-commit: 6e3e7652f1bf3b7afd4d7ec5233ea96d9861b5f0

--- a/documents/static/src/views/inspector/documents_inspector.scss
+++ b/documents/static/src/views/inspector/documents_inspector.scss
@@ -53,11 +53,6 @@
                     max-height: 100%;
                     max-width: 100%;
                 }
-
-                .o_documents_inspector_image {
-                    width: 120px;
-                    height: 75px;
-                }
             }
 
             &.o_documents_single_preview {
@@ -70,11 +65,6 @@
                     width: auto;
                     height: 100%;
                     object-fit: contain;
-                }
-
-                .o_documents_inspector_image {
-                    width: 268px;
-                    height: 150px;
                 }
 
                 &.o_documents_preview_mimetype {
@@ -93,6 +83,21 @@
 
                 &.o_documents_image_background {
                     background-color: white;
+                }
+
+                &.o_documents_inspector_img_preview_300_150 {
+                    max-width: 300px;
+                    max-height: 150px;
+                }
+
+                &.o_documents_inspector_img_preview_120_130 {
+                    max-width: 120px;
+                    max-height: 130px;
+                }
+
+                &.o_documents_inspector_img_preview_120_75 {
+                    max-width: 120px;
+                    max-height: 75px;
                 }
             }
 
